--- a/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
+
 <!-- <app-add-rest></app-add-rest> -->
 <!-- <app-add-dish></app-add-dish> -->
 <app-navbar></app-navbar>
-=======
-<<<<<<< HEAD
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/">Add Restaurant</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -25,9 +24,5 @@
       </div>
     </div>
   </nav>
-
-  <router-outlet></router-outlet>
-=======
-<app-user-register></app-user-register>
->>>>>>> 9ba26d499f4551cb43dc21cf2b336e06e10c97bf
->>>>>>> ba7337d5ed5706a82ca52bdf42fef33629d96650
+  <router-outlet></router-outlet> -->
+<!-- <app-user-register></app-user-register> -->
