--- a/FoodieApplication/frontend/FoodieApplication/src/app/add-Restaurant-Service/send-restaurant/send-restaurant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/add-Restaurant-Service/send-restaurant/send-restaurant.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addRestaurant" (ngSubmit)="sendRestaurant($event)" class="container-fluid">
+<form [formGroup]="addRestaurant" (ngSubmit)="sendRestaurant()" class="container-fluid">
   
     <div class="form-group" class="mt-3">
     <label for="restaurantName">Restaurant Name: </label>
@@ -12,10 +12,6 @@
     <input class="form-control" id="restaurantLocation" type="text" formControlName="restaurantLocation">
     <div *ngIf="restaurantLocation.invalid && (restaurantLocation.dirty ||restaurantLocation.touched)"></div>
         <div *ngIf="restaurantLocation.errors?.['required']" class="alert alert-danger">Restaurant Location Required ..</div>
-    </div>
-
-    <div *ngFor="let restaurant of restaurant">
-    <!-- <app-send-dish [restaurant]="restaurant"></app-send-dish> -->
     </div>
 
     <button type="submit">sendRestaurant</button>
