--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-dish/add-dish.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-dish/add-dish.component.html
@@ -1,17 +1,31 @@
 <div class="container">
-    <form [formGroup]="addDishForm" (ngSubmit)="addDish()">
+    <form [formGroup]="addDishForm" (ngSubmit)="addDish($event)">
         <mat-card class="card">
             <mat-card-header>
                 <mat-card-title>Add Dish</mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <h2>Choose your Restaurant</h2>
-                <mat-label>Restaurant Names</mat-label>
-                <mat-select (change)="changeRest($event)">
-                    <mat-option  *ngFor="let rest of restaurant" [value]="rest">
-                        {{rest}}
+                <!-- <div class="row">
+                    <div class="col">
+                            <mat-label>Choose your Restaurant Names</mat-label>
+                            <mat-select (change)="changeRest($event)">
+                                <mat-option  *ngFor="let restaurant of restaurant" [ngvalue]="restaurant">
+                                    {{restaurant.restaurantName}}  {{restaurant.restaurantLocation}}
+                                </mat-option>
+                            </mat-select>
+                            <p class="mt-3">
+                                You selected {{ selected | json }}
+                            </p>
+                    </div>
+                </div> -->
+                    <h3>Choose Your Restaurant</h3>
+                    <mat-select (change)="changeRest($event)">
+                    <mat-option *ngFor="let restaurant of restaurant" [value]="restaurant">
+                        {{restaurant.restaurantName}} {{restaurant.restaurantLocation}}
                     </mat-option>
-                </mat-select>
+                    </mat-select>
+
+                    
                 <div class="row">
                     <div class="col">
                         <mat-form-field class="full-width">
