--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-all/view-all.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-all/view-all.component.css
@@ -1,5 +1,6 @@
 
 .mt-5 {
-    margin-top: 15rem !important;
-    margin-right: 22rem !important;
+    margin-top: 50rem !important;
+    margin-right: 18rem !important;
+    align-content: center;
 }
