--- a/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
@@ -1,9 +1,9 @@
 
 <!-- <app-add-rest></app-add-rest> -->
 <!-- <app-add-dish></app-add-dish> -->
-<!-- <app-navbar></app-navbar> -->
+<app-navbar></app-navbar>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/">Add Restaurant</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -24,5 +24,5 @@
       </div>
     </div>
   </nav>
-  <router-outlet></router-outlet>
+  <router-outlet></router-outlet> -->
 <!-- <app-user-register></app-user-register> -->
