--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-dish/add-dish.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-dish/add-dish.component.html
@@ -5,25 +5,14 @@
                 <mat-card-title>Add Dish</mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <!-- <div class="row">
-                    <div class="col">
-                            <mat-label>Choose your Restaurant Names</mat-label>
-                            <mat-select (change)="changeRest($event)">
-                                <mat-option  *ngFor="let restaurant of restaurant" [ngvalue]="restaurant">
-                                    {{restaurant.restaurantName}}  {{restaurant.restaurantLocation}}
-                                </mat-option>
-                            </mat-select>
-                            <p class="mt-3">
-                                You selected {{ selected | json }}
-                            </p>
-                    </div>
-                </div> -->
-                    <h3>Choose Your Restaurant</h3>
-                    <mat-select (change)="changeRest($event)">
-                    <mat-option *ngFor="let restaurant of restaurant" [value]="restaurant">
-                        {{restaurant.restaurantName}} {{restaurant.restaurantLocation}}
+                <h3>Choose Your Restaurant</h3>
+                <mat-select (change)="changeRest($event)">
+                    <mat-option *ngFor="let restaurant of restaurant" value=" Rest Name:{{restaurant.restaurantName}} , location:{{restaurant.restaurantLocation}}">
+                    <b >id:</b>{{restaurant.restaurantId}} <b>Rest Name:</b>{{restaurant.restaurantName}} <b>Location:</b>{{restaurant.restaurantLocation}}
                     </mat-option>
-                    </mat-select>
+                </mat-select>
+                <p>You selected {{ selected | json}}</p>
+
                 <div class="row">
                     <div class="col">
                         <mat-form-field class="full-width">
@@ -52,6 +41,14 @@
                             <mat-error *ngIf="addDishForm.controls['dishType'].hasError('required')">
                                 Dish Type is <strong> required </strong>
                             </mat-error>
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <mat-form-field class="full-width">
+                            <input type="file">
+
                         </mat-form-field>
                     </div>
                 </div>
