--- a/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/dish">Send Dish</a>
           </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" routerLink="/image">Upload Image</a>
+          </li> -->
            
         </ul>
   
