--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-all/view-all.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-all/view-all.component.html
@@ -1,3 +1,4 @@
+ <div class="container-fluid">
  <div class="mt-5">
     <table class="table table-bordered">
       <thead>
@@ -18,3 +19,4 @@
       </tbody>
     </table>
   </div>
+</div>
