--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-all/view-all.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-all/view-all.component.html
@@ -2,6 +2,7 @@
     <table class="table table-bordered">
       <thead>
         <tr>
+          <th>Restaurant Id </th>
           <th>Restaurant Name</th>
           <th>Restaurant Location</th>
           <th>Status</th>
@@ -9,10 +10,11 @@
       </thead>
       <tbody class="tbody">
         <tr *ngFor="let restaurant of restaurant">
+          <td>{{restaurant.restaurantId}}</td>
           <td>{{restaurant.restaurantName}}</td>
           <td>{{restaurant.restaurantLocation}}</td>
-          <td><button type="button" class="btn btn-danger" (click)="delete()">Reject</button></td>
-          <td><button type="button" class="btn btn-primary" (click)="Add($event)">Approve</button></td>
+          <td><button type="button" class="btn btn-danger" (click)="delete(restaurant.restaurantId)">Reject</button></td>
+          <td><button type="button" class="btn btn-primary" [disabled]="status" (click)="Add(restaurant)">Approve</button></td>
         </tr>
       </tbody>
     </table>
