--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-rest/add-rest.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-rest/add-rest.component.css
@@ -1,7 +1,11 @@
 
-.full-width {
-  width: 100%;
+.container{
+  margin-left: -100%;
 }
+
+/* .full-width {
+  width: 100%;
+} */
 
 .card {
   min-width: 100px;
