--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-restuarant/view-restuarant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-restuarant/view-restuarant.component.html
@@ -1,4 +1,4 @@
- <div class="mt-5">
+ <div class="mt-2">
     <table class="table table-bordered">
       <thead>
         <tr>
@@ -14,7 +14,8 @@
           <td>{{restaurant.restaurantName}}</td>
           <td>{{restaurant.restaurantLocation}}</td>
           <td><button type="button" class="btn btn-danger" (click)="delete(restaurant.restaurantId)">Reject</button></td>
-          <td><button type="button" class="btn btn-primary" [disabled]="status" (click)="Add(restaurant)">Approve</button></td>
+          <td><button type="button" class="btn btn-primary" (click)="Add(restaurant)">Approve</button></td>
+          <!-- <td><button type="button" class="btn btn-primary" [disabled]="isSubmitBtnDisabled" (click)="Add(restaurant)">Approve</button></td> -->
         </tr>
       </tbody>
     </table>
