--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-dish/add-dish.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-dish/add-dish.component.html
@@ -8,10 +8,10 @@
                 <h3>Choose Your Restaurant</h3>
                 <mat-select (change)="changeRest($event)">
                     <mat-option *ngFor="let restaurant of restaurant" value=" Rest Name:{{restaurant.restaurantName}} , location:{{restaurant.restaurantLocation}}">
-                    <b >id:</b>{{restaurant.restaurantId}} <b>Rest Name:</b>{{restaurant.restaurantName}} <b>Location:</b>{{restaurant.restaurantLocation}}
+                    <b>Rest Name:</b> {{restaurant.restaurantName}} <b>Location:</b> {{restaurant.restaurantLocation}}
                     </mat-option>
                 </mat-select>
-                <p>You selected {{ selected | json}}</p>
+                <!-- <p>You selected {{ selected | json}}</p> -->
 
                 <div class="row">
                     <div class="col">
@@ -44,13 +44,12 @@
                         </mat-form-field>
                     </div>
                 </div>
-                <div class="row">
+                <div formGroupName="image">
+                    <div class="row">
                     <div class="col">
-                        <mat-form-field class="full-width">
-                            <input type="file">
-
-                        </mat-form-field>
+                        <input name="image" type="file" (change)="onFileSelected($event)">
                     </div>
+                </div>
                 </div>
             </mat-card-content>
             <mat-card-actions>
