--- a/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
@@ -1,7 +1,8 @@
-
+<!-- <div class="bg-img"> -->
 <!-- <app-add-rest></app-add-rest> -->
 <!-- <app-add-dish></app-add-dish> -->
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
+<app-nav-bar></app-nav-bar>
 <!-- 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -29,3 +30,4 @@
   </nav>
   <router-outlet></router-outlet>
 <!-- <app-user-register></app-user-register> -->
+<!-- </div> -->
