--- a/FoodieApplication/frontend/FoodieApplication/src/app/user-register/user-register.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/user-register/user-register.component.css
@@ -1,17 +1,15 @@
 .full-width {
   width: 100%;
 }
+form{
 
-.shipping-card {
+margin-left: 500px;
+margin-right: 500px;
+}
+.register {
   min-width: 120px;
   margin: 20px auto;
 }
-
-.mat-radio-button {
-  display: block;
-  margin: 5px 0;
-}
-
 .row {
   display: flex;
   flex-direction: row;
