--- a/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
@@ -1,9 +1,9 @@
 
 <!-- <app-add-rest></app-add-rest> -->
 <!-- <app-add-dish></app-add-dish> -->
-<app-navbar></app-navbar>
-<!-- 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <app-navbar></app-navbar> -->
+
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/">Add Restaurant</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -18,9 +18,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/dish">Send Dish</a>
           </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" routerLink="/image">Upload Image</a>
-          </li> -->
+          </li>
            
         </ul>
   
@@ -28,4 +28,6 @@
     </div>
   </nav>
   <router-outlet></router-outlet> -->
+  <!-- <app-dashboard></app-dashboard> -->
+  <app-nav></app-nav>
 <!-- <app-user-register></app-user-register> -->
