--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/navbar/navbar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <span>Restaurant Management</span>
+    <span>Add Restaurant</span>
     <button mat-button color="accent" routerLink="addRest">Add Restaurant</button>
     <button mat-button color="accent" routerLink="addDish">Add Dish</button>
     <button mat-button color="accent" routerLink="find">Find All Restaurant</button>
