--- a/FoodieApplication/frontend/FoodieApplication/src/app/add-Restaurant-Service/send-restaurant/send-restaurant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/add-Restaurant-Service/send-restaurant/send-restaurant.component.html
@@ -1,18 +1,32 @@
 <form [formGroup]="addRestaurant" (ngSubmit)="sendRestaurant()" class="container-fluid">
-  
-    <div class="form-group" class="mt-3">
-    <label for="restaurantName">Restaurant Name: </label>
-    <input class="form-control" id="restaurantName" type="text" formControlName="restaurantName">
-    <div *ngIf="restaurantName.invalid && (restaurantName.dirty ||restaurantName.touched)"></div>
-        <div *ngIf="restaurantName.errors?.['required']" class="alert alert-danger">Restaurant Name Required ..</div>
-    </div>
-      
-    <div class="form-group">
-    <label for="restaurantLocation">Restaurant Location: </label>
-    <input class="form-control" id="restaurantLocation" type="text" formControlName="restaurantLocation">
-    <div *ngIf="restaurantLocation.invalid && (restaurantLocation.dirty ||restaurantLocation.touched)"></div>
-        <div *ngIf="restaurantLocation.errors?.['required']" class="alert alert-danger">Restaurant Location Required ..</div>
-    </div>
-
-    <button type="submit" [disabled]="!addRestaurant.valid">sendRestaurant</button>
+    <mat-card class="card">
+        <mat-card-header>
+          <mat-card-title> Send Restaurant</mat-card-title>
+        </mat-card-header>
+    <mat-card-content>
+        <div class="row">
+            <div class="col">
+                <mat-form-field class="full-width">
+                    <input matInput placeholder="Enter Restaurant Name" formControlName="restaurantName">
+                    <mat-error *ngIf="addRestaurant.controls['restaurantName'].hasError('required')">
+                    Restaurant Name is <strong> required </strong>
+                    </mat-error>
+                </mat-form-field>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <mat-form-field class="full-width">
+                    <input matInput placeholder="Enter Restaurant Location" formControlName="restaurantLocation">
+                    <mat-error *ngIf="addRestaurant.controls['restaurantLocation'].hasError('required')">
+                    Restaurant Location is <strong> required </strong>
+                    </mat-error>
+                </mat-form-field>
+            </div>
+        </div>
+</mat-card-content>
+    <mat-card-actions>
+        <button type="submit" mat-raised-button color="primary" [disabled]="!addRestaurant.valid">send Restaurant</button>
+    </mat-card-actions>  
+    </mat-card>
 </form>
