--- a/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
@@ -18,14 +18,10 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/dish">Send Dish</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/image">Upload Image</a>
-          </li>
-           
         </ul>
   
       </div>
     </div>
   </nav>
-  <router-outlet></router-outlet>
+  <router-outlet></router-outlet> -->
 <!-- <app-user-register></app-user-register> -->
