--- a/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
@@ -1,44 +1,3 @@
-<!-- <div class="bg-img"> -->
-<!-- <app-add-rest></app-add-rest> -->
-<!-- <app-add-dish></app-add-dish> -->
-<!-- <app-navbar></app-navbar> -->
-<<<<<<< HEAD
-
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-=======
+<!-- <app-nav></app-nav>
+<app-navbar></app-navbar> -->
 <app-nav-bar></app-nav-bar>
-<!-- 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
->>>>>>> c7255009cf9e2407eb1546240a46198fe3fc1eba
-    <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/">Add Restaurant</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/">Send Restaurant</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/dish">Send Dish</a>
-          </li>
-        </ul>
-  
-      </div>
-    </div>
-  </nav>
-<<<<<<< HEAD
-  <router-outlet></router-outlet> -->
-=======
-<<<<<<< HEAD
-  <router-outlet></router-outlet> -->
-  <!-- <app-dashboard></app-dashboard> -->
-  <app-nav></app-nav>
-=======
-  <router-outlet></router-outlet>
->>>>>>> c7255009cf9e2407eb1546240a46198fe3fc1eba
->>>>>>> b840cb22b92bec9b2129e91d83715e410df79aa3
-<!-- <app-user-register></app-user-register> -->
-<!-- </div> -->
