--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-dish/show-dish.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-dish/show-dish.component.html
@@ -1,16 +1,16 @@
-<section>
-    <button mat-raised-button (click)="display()" color="primary">Primary</button>
-</section>
-<mat-card app-player matRipple class="card" *ngFor="let dish of dishes">
-  <!-- <a routerLink="dishList/{{restuarent.restaurantId}}">
-   {{restuarent.restaurantId}}
-<!-- <img mat-card-image [src]="video.snippet.thumbnails.medium.url"> -->
-<!-- </a>  --> 
-<div>{{ dish.dishName }}</div>
+<mat-card app-player matRipple class="card" *ngFor="let dish of data;index as indexOfelement">
+
 <mat-card-content>
+  <!-- <div>{{dish.dishId}}</div> -->
+<div>{{ dish.dishName }}</div>
 <h5>{{ dish.dishType }}</h5>
-<div *ngIf=data>
-  <img [src]="data">
-</div>
+ <div *ngFor="let image of dish.image">
+  <!-- <div>{{image.fileName}}</div> -->
+   <!-- <div *ngIf="image.fileName==dish.dishId"> -->
+  <img  [src]="image.image">
+<!-- </div> -->
+  </div>
 </mat-card-content>
-</mat-card>
+<a routerLink="dishList/{{dish.dishId}}"><mat-icon style="float: right;">favorite</mat-icon></a>
+
+ </mat-card>
