--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-rest/add-rest.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-rest/add-rest.component.css
@@ -1,15 +1,20 @@
-
+/* 
 .container{
   margin-left: -100%;
-}
-
-/* .full-width {
-  width: 100%;
 } */
 
+.full-width {
+  width: 100%;
+}
+
 .card {
-  min-width: 100px;
-  margin-top: 240%;
+  position: absolute;
+  /* margin-top: 5rem;
+  margin-left: -40rem;
+  margin-right: 1rem */
+  margin: 6rem;
+  margin-left: -10em;
+
 }
 
 .mat-radio-button {
@@ -29,4 +34,8 @@
 
 .col:last-child {
   margin-right: 0;
+} 
+
+.mat-radio-button ~ .mat-radio-button {
+  margin-left: 16px;
 }
