--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-rest/add-rest.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-rest/add-rest.component.html
@@ -8,6 +8,16 @@
                 <div class="row">
                     <div class="col">
                         <mat-form-field class="full-width">
+                            <input matInput placeholder="Enter Restaurant Id" formControlName="restaurantId">
+                            <mat-error *ngIf="addRestForm.controls['restaurantId'].hasError('required')">
+                                Restaurant Id is <strong> required </strong>
+                            </mat-error>
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <mat-form-field class="full-width">
                             <input matInput placeholder="Enter Restaurant Name" formControlName="restaurantName">
                             <mat-error *ngIf="addRestForm.controls['restaurantName'].hasError('required')">
                                 Restaurant Name is <strong> required </strong>
@@ -20,12 +30,6 @@
                         <mat-form-field class="full-width">
                             <mat-label>Restaurant Location</mat-label>
                             <input matInput placeholder="Enter Restaurant Location" formControlName="restaurantLocation">
-                            <!-- <mat-select formControlName="restaurantLocation">
-                            <mat-option>choose your location </mat-option>
-                            <mat-option *ngFor="let restaurantLocation of Locations" [value]="restaurantLocation">
-                                {{restaurantLocation}}
-                            </mat-option>
-                            </mat-select> -->
                             <mat-error *ngIf="addRestForm.controls['restaurantLocation'].hasError('required')">
                                 Restaurant Name is <strong> required </strong>
                             </mat-error>
