--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/navbar/navbar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <span>Add Restaurant</span>
+    <span><span>Add Restaurant</span></span>
     <button mat-button color="accent" routerLink="addRest">Add Restaurant</button>
     <button mat-button color="accent" routerLink="addDish">Add Dish</button>
     <button mat-button color="accent" routerLink="restRequest">View Restaurant Request</button>
