--- a/FoodieApplication/frontend/FoodieApplication/src/app/search-Service/search/search.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/search-Service/search/search.component.html
@@ -31,7 +31,7 @@
             
                 <div class="col-lg-3 col-md-4 col-xs-6" *ngFor="let image of dishes.image">
                 <a href="#" class="d-block mb-4 h-100">
-                <img class="img-fluid img-thumbnail" [src]="image.imageName" style="height: 171px;width: fit-content;">
+                <img class="img-fluid img-thumbnail" [src]="image.image" style="height: 171px;width: fit-content;">
                 </a>
                 </div>
             </mat-card-content>
