--- a/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!-- <div class="bg-img"> -->
 <!-- <app-add-rest></app-add-rest> -->
 <!-- <app-add-dish></app-add-dish> -->
@@ -30,11 +29,7 @@
   <router-outlet></router-outlet> -->
   <!-- <app-dashboard></app-dashboard> -->
   <app-nav></app-nav> 
+  <!-- <app-nav-bar></app-nav-bar> -->
   <router-outlet></router-outlet>
 <!-- <app-user-register></app-user-register> -->
 <!-- </div> -->
-=======
-<!-- <app-nav></app-nav>
-<app-navbar></app-navbar> -->
-<app-nav-bar></app-nav-bar>
->>>>>>> 2bae6d81d8ef16b1b7dc4f8834e1d5cb2917bf1b
