--- a/FoodieApplication/frontend/FoodieApplication/src/app/profile-dashboard/profile-dashboard.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/profile-dashboard/profile-dashboard.component.css
@@ -1,12 +1,10 @@
-body{
-  background: -webkit-linear-gradient(left, #3931af, #00c6ff);
-}
+
 .emp-profile{
   padding: 3%;
   margin-top: 3%;
   margin-bottom: 3%;
   border-radius: 0.5rem;
-  background: #fff;
+  background:#212529b8;
 }
 .profile-img{
   text-align: center;
@@ -35,7 +33,7 @@ body{
   color: #333;
 }
 .profile-head h6{
-  color: #0062cc;
+  color: white
 }
 .profile-edit-btn{
   border: none;
@@ -65,7 +63,7 @@ body{
 }
 .profile-head .nav-tabs .nav-link.active{
   border: none;
-  border-bottom:2px solid #0062cc;
+  border-bottom:2px solid white;
 }
 .profile-work{
   padding: 14%;
@@ -91,9 +89,9 @@ body{
 }
 .profile-tab p{
   font-weight: 600;
-  color: #0062cc;
+  color: white;
 }
 
 label{
-  color: blue;
+  color: white;
 }
