--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
@@ -17,6 +17,6 @@
     </mat-card-content>
     <!-- </div> -->
     </a>
-    <a routerLink="dishList01/{{restuarent.restaurantId}}"><mat-icon style="float: right;">favorite</mat-icon></a>
+    <a routerLink="dishList01/{{restuarent.restaurantId}}"><mat-icon style="float: right;" onclick="add(restuarent)">favorite</mat-icon></a>
     </mat-card>
     </div>
