--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/navbar/navbar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/navbar/navbar.component.html
@@ -4,5 +4,7 @@
     <button mat-button color="accent" routerLink="addDish">Add Dish</button>
     <button mat-button color="accent" routerLink="restRequest">View Restaurant Request</button>
     <button mat-button color="accent" routerLink="dishRequest">View Dish Request</button>
+    <div>
     <router-outlet></router-outlet>
+   </div>
 </mat-toolbar>
