--- a/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/app.component.html
@@ -1,1 +1,21 @@
 <app-nav-bar></app-nav-bar>
+<!-- <div class="bg-img"> -->
+<!-- <app-add-rest></app-add-rest> -->
+<!-- <app-add-dish></app-add-dish> -->
+
+<!-- <app-navbar></app-navbar> -->
+<!-- <app-get-all-fav></app-get-all-fav> -->
+
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
+
+<!-- <router-outlet></router-outlet>  -->
+<!-- <app-dashboard></app-dashboard> -->
+<!-- <app-nav></app-nav>
+<router-outlet></router-outlet> -->
+<!-- <app-nav></app-nav> 
+<router-outlet></router-outlet> -->
+<!-- <app-user-register></app-user-register> -->
+<!-- </div> -->
+<!-- <app-nav></app-nav>
+<app-navbar></app-navbar> -->
+<!-- <app-nav-bar></app-nav-bar> -->
