--- a/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-all-fav/get-all-fav.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-all-fav/get-all-fav.component.css
@@ -1,6 +1,41 @@
-mat-grid-tile {
+/* mat-grid-tile {
   background: lightblue;
 }
 .mat-grid-list{
     margin: 10rem;
+} */
+
+.card {
+  width: 260px;
+  height: 270px;
+  display: inline-block;
+  margin: 20px;
+}
+
+.card img {
+  height: 150px;
+}
+
+.card h5 {
+  white-space: normal;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  letter-spacing: .25px;
+  font-weight: 500;
+  font-size: 1.15em;
+  -webkit-line-clamp: 2;
+}
+
+#duration {
+  background-color: black;
+  position: absolute;
+  top: 45%;
+  right: 4%;
+  z-index: 1;
+  width: auto;
+  height: 20px;
+  text-align: right;
+  padding: 1px 6px;
 }
