--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-dish/add-dish.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-dish/add-dish.component.css
@@ -3,6 +3,7 @@
   margin-left: -100%;
 } */
 
+
 .full-width {
   width: 100%;
 }
@@ -13,7 +14,7 @@
   margin-left: -40rem;
   margin-right: 1rem */
   margin: 4rem;
-  margin-left: -38rem
+  margin-left: -15rem;
 }
 
 .mat-radio-button {
