--- a/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-all-fav/get-all-fav.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-all-fav/get-all-fav.component.html
@@ -1,10 +1,10 @@
-
-<!-- <mat-grid-list cols="1" rowHeight="6:1">
+<!-- 
+<mat-grid-list cols="1" rowHeight="6:1">
   <mat-grid-tile>1</mat-grid-tile>
   <mat-grid-tile>2</mat-grid-tile>
   <mat-grid-tile>3</mat-grid-tile>
   <mat-grid-tile>4</mat-grid-tile>
-</mat-grid-list> -->
+</mat-grid-list>
 
 <div class="bg-image hover-overlay hover-zoom hover-shadow ripple">
     <mat-card app-player matRipple class="card" *ngFor="let restuarent of data">
@@ -20,4 +20,4 @@
     </a>
     <a routerLink="dishList01/{{restuarent.restaurantId}}"><mat-icon style="float: right;" onclick="remove(restuarent)">favorite</mat-icon></a>
     </mat-card>
-    </div>
+    </div> -->
